<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="8dp"
    style="@style/MyCardViewStyle">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/mainColor"
            android:background="@color/colorPrimaryDark"

            android:textSize="30sp"/>
        <TextView
            android:id="@+id/event_coefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coefficient"
            android:textStyle="bold"
            android:gravity="left"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:gravity="left"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/event_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:gravity="left"
            android:textSize="24sp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>